Pack selection no longer overflows

--- a/resources/style.css
+++ b/resources/style.css
@@ -105,6 +105,8 @@ body {
   border-radius: 3vw;
   margin-left: 38vw;
   width: 20vw;
+  height: 20vw;
+  overflow-y: scroll;
   margin-top: 10vh;
 }
 .experimental {
